2003-04-07  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.mdoc: document "quit".
	* dccserver.man: regen.

	* NEWS:	0.3 RELEASED

	* configure.ac: Bump to 0.3.

	* Makefile.am, configure.ac: add and install dccsend man pages.

	* dccsend.mdoc: add man page for dccsend.
	* dccsend.man: generate.

	* dccsend.c (main): fix -v output.

	* dccserver.c (main): fix -v output.

	* dccsend.c (usage): fix usage.
	(main): change default nickname to "dccsend".

	* dccserver.mdoc: add -e to SYNOPSIS.
	* dccserver.man: regen.

2003-04-05  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccserver.c (get_file): For consistency, don't insist on O_EXCL
	when creating new files. Noted by Rudolf Polzer.

	* dccserver.mdoc: remove a paragraph from BUGS that's no longer
	true. Noted by Rudolf Polzer.
	* dccserver.man: regen.

	* dccsend.c (send_file): fix fseek return value check.

	* dccserver.c (get_file): don't append to file, but seek to offset
	to avoid problems with two or more writers to the same file.
	Idea from Rudolf Polzer.

	* dccserver.c (tell_client): add fflush; seems to help at least on
	Solaris.

	* dccserver.c (handle_input): return -1 if stdin closed, or user
	entered "quit".
	(main): exit if -1 returned by handle_input.
	Idea from Rudolf Polzer.

2003-04-04  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* getaddrinfo.h: new file, from Dieter Baron.
	* getaddrinfo.c: new file, from Dieter Baron.
	* configure.ac: use getaddrinfo.c, if needed.
	* dccsend.c: include getaddrinfo.h, if needed.
	* Makefile.am (EXTRA_DIST): add getaddrinfo.[ch].
	* COPYING: add license for getaddrinfo.[ch].

	* dccserver.c (handle_connection): add fflush(stderr).
	(converse_with_client): here too.

	* dccserver.c (get_file): add more verbose error messages in case
	we already have the complete file, or more bytes than client is
	willing to send.

	* configure.ac: use errx if needed.
	* errx.c (errx): new file.
	* COPYING: mention errx.c.
	* Makefile.am (EXTRA_DIST): add errx.c.
