@@ -1,3 +1,8 @@
+2003-04-11  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
+
+	* dccserver.c (main): do chroot after option parsing, should be
+	early enough and avoid an error message in case of -h or -v.
+
 2003-04-07  Thomas Klausner  <wiz@danbala.tuwien.ac.at>
 
 	* dccserver.mdoc: document "quit".
